# superowl_final_poc

./: .gitignore  QUICK_REFERENCE.md  README.md  SUMMARIZATION_FIX.md  TECHNICAL_DETAILS.md  app.txt  final_project_dump.txt  internship.txt  main.py  pyproject.toml  superowl-voice-ai-v2 (1).html  superowl_final_source_dump.txt  superowl_test.db  vapi_migrate.py
.github/: copilot-instructions.md
.github/instructions/: docs-first.instructions.md  vapi-docs.instructions.md
.qwen/: settings.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/core/: config.py  dependencies.py  json_storage.py
app/models/: __init__.py  business.py  call_log.py  prompt_template.py
app/routers/: businesses.py  onboarding.py  playground.py  prompts.py  slack_actions.py  slack_events.py  trigger.py  vapi_webhook.py
app/schemas/: business.py  call.py  webhook.py
app/services/: call_orchestrator.py  groq_service.py  nango_service.py  prompt_builder.py  slack_service.py  vapi_service.py
app/utils/: formatting.py  validators.py
data/: businesses.json  call_logs.json  prompts.json
frontend/: index.html
tests/: conftest.py  test_businesses.py  test_vapi_webhook.py
